# actix_tutorials

./: README.md
authentication/: .env  Cargo.toml
authentication/src/: api_error.rs  db.rs  main.rs
authentication/src/auth/: mod.rs  routes.rs
authentication/src/user/: model.rs  routes.rs
caching/: .env  Cargo.toml
caching/src/: api_error.rs  cache.rs  main.rs
caching/src/user/: model.rs
email_verification/: Cargo.toml
email_verification/migrations/2019-11-10-084714_email_verification_token/: down.sql  up.sql
email_verification/src/: api_error.rs  main.rs  schema.rs
email_verification/src/auth/: routes.rs
email_verification/src/email/: api.rs  mod.rs
email_verification/src/email_verification_token/: mod.rs  model.rs
email_verification/src/user/: mod.rs
filtering_and_sorting/migrations/2019-09-08-152208_create_user/: up.sql
filtering_and_sorting/src/user/: model.rs  routes.rs
integration_tests/: .env  Cargo.toml
integration_tests/migrations/2019-09-08-152208_create_user/: down.sql
integration_tests/src/: db.rs  main.rs  test.rs
integration_tests/src/user/: mod.rs  model.rs  routes.rs  tests.rs
macros/src/db/: connection.rs  macros.rs  mod.rs  paginate.rs
macros/src/user/: model.rs  routes.rs
pagination/: Cargo.toml
pagination/src/: schema.rs
pagination/src/db/: mod.rs  paginate.rs
pagination/src/user/: model.rs
rest_api/: Cargo.toml
rest_api/src/: api_error.rs  main.rs
rest_api/src/user/: model.rs  routes.rs
