[package]
name = "rest-api"
version = "0.1.0"
authors = ["Tore Pettersen <tore@cloudmaker.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-redis = { version = "0.7", features = ["web"] }
actix-session = "0.2"
actix-web = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.11"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.6"
hex = "0.4"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
rand = "0.7"
reqwest = "0.9"
rust-argon2 = "0.5"
uuid = { version = "0.6", features = ["serde", "v4"] }
